# cdownloader

./: .editorconfig  .gitignore  Dockerfile  README.md  compose.yaml  meson.build  yt.vid.downloader.json
data/: meson.build  yt.vid.downloader.desktop.in  yt.vid.downloader.gschema.xml  yt.vid.downloader.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: cdownloader-application.c  cdownloader-application.h  cdownloader-window.c  cdownloader-window.h  cdownloader-window.ui  cdownloader.gresource.xml  main.c  meson.build
